--- a/src/app.css
+++ b/src/app.css
@@ -75,3 +75,15 @@
 		@apply font-sans;
 	}
 }
+
+@layer utilities {
+	.bg-custom-gradient {
+		background: radial-gradient(
+				at 54.90301724137932% 95.41666666666667%,
+				#009ffd 0px,
+				transparent 50%
+			),
+			radial-gradient(at 90.14008620689656% 22.916666666666664%, #ffa400 0px, transparent 50%),
+			radial-gradient(at 26.5625% 35.41666666666667%, #ffffff 0px, transparent 50%), #1684a7;
+	}
+}
